src/net/qdsu/Mlese/Parser/MleseParser.java
// Generated from C:/Users/soodo/Documents/MLeseCompiler\Mlese.g4 by ANTLR 4.7.2
package net.qdsu.Mlese.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MleseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, LBRACK=8, RBRACK=9, 
		BOOL=10, INT=11, STRING=12, VOID=13, TRUE=14, FALSE=15, IF=16, ELSE=17, 
		FOR=18, WHILE=19, BREAK=20, CONTINUE=21, RETURN=22, NEW=23, CLASS=24, 
		THIS=25, INTCONST=26, STRINGCONST=27, NULLCONST=28, PLUS=29, MINUS=30, 
		STAR=31, DIV=32, MOD=33, LT=34, GT=35, EQ=36, NE=37, GE=38, LE=39, ANDAND=40, 
		OROR=41, NOT=42, LSHIFT=43, RSHIFT=44, TILDE=45, OR=46, CARET=47, AND=48, 
		ASSIGN=49, PLUSPLUS=50, MINUSMINUS=51, ID=52, Whitespace=53, Newline=54, 
		BlockComment=55, LineComment=56;
	public static final int
		RULE_basicTypeSpecifier = 0, RULE_typeSpecifier = 1, RULE_argumentList = 2, 
		RULE_parameterList = 3, RULE_creator = 4, RULE_wrongCreator = 5, RULE_expression = 6, 
		RULE_constant = 7, RULE_varDeclaration = 8, RULE_varStatement = 9, RULE_block = 10, 
		RULE_nonDeclStatement = 11, RULE_statement = 12, RULE_functionDefinition = 13, 
		RULE_constructorDefinition = 14, RULE_classDefinition = 15, RULE_memberDeclaration = 16, 
		RULE_program = 17, RULE_programSection = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"basicTypeSpecifier", "typeSpecifier", "argumentList", "parameterList", 
			"creator", "wrongCreator", "expression", "constant", "varDeclaration", 
			"varStatement", "block", "nonDeclStatement", "statement", "functionDefinition", 
			"constructorDefinition", "classDefinition", "memberDeclaration", "program", 
			"programSection"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'('", "')'", "'.'", "';'", "'{'", "'}'", "'['", "']'", 
			"'bool'", "'int'", "'string'", "'void'", "'true'", "'false'", "'if'", 
			"'else'", "'for'", "'while'", "'break'", "'continue'", "'return'", "'new'", 
			"'class'", "'this'", null, null, "'null'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'<'", "'>'", "'=='", "'!='", "'>='", "'<='", "'&&'", "'||'", 
			"'!'", "'<<'", "'>>'", "'~'", "'|'", "'^'", "'&'", "'='", "'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "LBRACK", "RBRACK", "BOOL", 
			"INT", "STRING", "VOID", "TRUE", "FALSE", "IF", "ELSE", "FOR", "WHILE", 
			"BREAK", "CONTINUE", "RETURN", "NEW", "CLASS", "THIS", "INTCONST", "STRINGCONST", 
			"NULLCONST", "PLUS", "MINUS", "STAR", "DIV", "MOD", "LT", "GT", "EQ", 
			"NE", "GE", "LE", "ANDAND", "OROR", "NOT", "LSHIFT", "RSHIFT", "TILDE", 
			"OR", "CARET", "AND", "ASSIGN", "PLUSPLUS", "MINUSMINUS", "ID", "Whitespace", 
			"Newline", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mlese.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MleseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BasicTypeSpecifierContext extends ParserRuleContext {
		public Token returnType;
		public TerminalNode BOOL() { return getToken(MleseParser.BOOL, 0); }
		public TerminalNode INT() { return getToken(MleseParser.INT, 0); }
		public TerminalNode VOID() { return getToken(MleseParser.VOID, 0); }
		public TerminalNode STRING() { return getToken(MleseParser.STRING, 0); }
		public TerminalNode ID() { return getToken(MleseParser.ID, 0); }
		public BasicTypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicTypeSpecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterBasicTypeSpecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitBasicTypeSpecifier(this);
		}
	}

	public final BasicTypeSpecifierContext basicTypeSpecifier() throws RecognitionException {
		BasicTypeSpecifierContext _localctx = new BasicTypeSpecifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_basicTypeSpecifier);
		try {
			setState(43);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				((BasicTypeSpecifierContext)_localctx).returnType = match(BOOL);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				((BasicTypeSpecifierContext)_localctx).returnType = match(INT);
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				((BasicTypeSpecifierContext)_localctx).returnType = match(VOID);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(41);
				((BasicTypeSpecifierContext)_localctx).returnType = match(STRING);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(42);
				((BasicTypeSpecifierContext)_localctx).returnType = match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecifierContext extends ParserRuleContext {
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpecifier; }
	 
		public TypeSpecifierContext() { }
		public void copyFrom(TypeSpecifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BasicTypeSpContext extends TypeSpecifierContext {
		public BasicTypeSpecifierContext basicTypeSpecifier() {
			return getRuleContext(BasicTypeSpecifierContext.class,0);
		}
		public BasicTypeSpContext(TypeSpecifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterBasicTypeSp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitBasicTypeSp(this);
		}
	}
	public static class ArrayTypeSpContext extends TypeSpecifierContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(MleseParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(MleseParser.RBRACK, 0); }
		public ArrayTypeSpContext(TypeSpecifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterArrayTypeSp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitArrayTypeSp(this);
		}
	}

	public final TypeSpecifierContext typeSpecifier() throws RecognitionException {
		return typeSpecifier(0);
	}

	private TypeSpecifierContext typeSpecifier(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeSpecifierContext _localctx = new TypeSpecifierContext(_ctx, _parentState);
		TypeSpecifierContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_typeSpecifier, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new BasicTypeSpContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(46);
			basicTypeSpecifier();
			}
			_ctx.stop = _input.LT(-1);
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArrayTypeSpContext(new TypeSpecifierContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_typeSpecifier);
					setState(48);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					{
					setState(49);
					match(LBRACK);
					setState(50);
					match(RBRACK);
					}
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArgumentListContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterArgumentList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitArgumentList(this);
		}
	}

	public final ArgumentListContext argumentList() throws RecognitionException {
		ArgumentListContext _localctx = new ArgumentListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argumentList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			expression(0);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(57);
				match(T__0);
				setState(58);
				expression(0);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			varDeclaration();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(65);
				match(T__0);
				setState(66);
				varDeclaration();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatorContext extends ParserRuleContext {
		public WrongCreatorContext wrongCreator() {
			return getRuleContext(WrongCreatorContext.class,0);
		}
		public BasicTypeSpecifierContext basicTypeSpecifier() {
			return getRuleContext(BasicTypeSpecifierContext.class,0);
		}
		public List<TerminalNode> LBRACK() { return getTokens(MleseParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(MleseParser.LBRACK, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(MleseParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(MleseParser.RBRACK, i);
		}
		public CreatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterCreator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitCreator(this);
		}
	}

	public final CreatorContext creator() throws RecognitionException {
		CreatorContext _localctx = new CreatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_creator);
		try {
			int _alt;
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				wrongCreator();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				basicTypeSpecifier();
				setState(74);
				match(T__1);
				setState(75);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				basicTypeSpecifier();
				setState(82); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(78);
						match(LBRACK);
						setState(79);
						expression(0);
						setState(80);
						match(RBRACK);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(84); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(86);
						match(LBRACK);
						setState(87);
						match(RBRACK);
						}
						} 
					}
					setState(92);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				basicTypeSpecifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WrongCreatorContext extends ParserRuleContext {
		public BasicTypeSpecifierContext basicTypeSpecifier() {
			return getRuleContext(BasicTypeSpecifierContext.class,0);
		}
		public List<TerminalNode> LBRACK() { return getTokens(MleseParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(MleseParser.LBRACK, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(MleseParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(MleseParser.RBRACK, i);
		}
		public WrongCreatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wrongCreator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterWrongCreator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitWrongCreator(this);
		}
	}

	public final WrongCreatorContext wrongCreator() throws RecognitionException {
		WrongCreatorContext _localctx = new WrongCreatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_wrongCreator);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			basicTypeSpecifier();
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97);
					match(LBRACK);
					setState(98);
					expression(0);
					setState(99);
					match(RBRACK);
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(108); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(106);
					match(LBRACK);
					setState(107);
					match(RBRACK);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(116); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(112);
					match(LBRACK);
					setState(113);
					expression(0);
					setState(114);
					match(RBRACK);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(118); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrefixExprContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PLUSPLUS() { return getToken(MleseParser.PLUSPLUS, 0); }
		public TerminalNode MINUSMINUS() { return getToken(MleseParser.MINUSMINUS, 0); }
		public TerminalNode PLUS() { return getToken(MleseParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MleseParser.MINUS, 0); }
		public TerminalNode NOT() { return getToken(MleseParser.NOT, 0); }
		public TerminalNode TILDE() { return getToken(MleseParser.TILDE, 0); }
		public PrefixExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterPrefixExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitPrefixExpr(this);
		}
	}
	public static class BinaryExpContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode STAR() { return getToken(MleseParser.STAR, 0); }
		public TerminalNode DIV() { return getToken(MleseParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(MleseParser.MOD, 0); }
		public TerminalNode PLUS() { return getToken(MleseParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MleseParser.MINUS, 0); }
		public TerminalNode LSHIFT() { return getToken(MleseParser.LSHIFT, 0); }
		public TerminalNode RSHIFT() { return getToken(MleseParser.RSHIFT, 0); }
		public TerminalNode LT() { return getToken(MleseParser.LT, 0); }
		public TerminalNode LE() { return getToken(MleseParser.LE, 0); }
		public TerminalNode GT() { return getToken(MleseParser.GT, 0); }
		public TerminalNode GE() { return getToken(MleseParser.GE, 0); }
		public TerminalNode EQ() { return getToken(MleseParser.EQ, 0); }
		public TerminalNode NE() { return getToken(MleseParser.NE, 0); }
		public TerminalNode AND() { return getToken(MleseParser.AND, 0); }
		public TerminalNode CARET() { return getToken(MleseParser.CARET, 0); }
		public TerminalNode OR() { return getToken(MleseParser.OR, 0); }
		public TerminalNode ANDAND() { return getToken(MleseParser.ANDAND, 0); }
		public TerminalNode OROR() { return getToken(MleseParser.OROR, 0); }
		public TerminalNode ASSIGN() { return getToken(MleseParser.ASSIGN, 0); }
		public BinaryExpContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterBinaryExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitBinaryExp(this);
		}
	}
	public static class MemberExpContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ID() { return getToken(MleseParser.ID, 0); }
		public MemberExpContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterMemberExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitMemberExp(this);
		}
	}
	public static class IdExpContext extends ExpressionContext {
		public TerminalNode ID() { return getToken(MleseParser.ID, 0); }
		public IdExpContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterIdExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitIdExp(this);
		}
	}
	public static class NewExpContext extends ExpressionContext {
		public TerminalNode NEW() { return getToken(MleseParser.NEW, 0); }
		public CreatorContext creator() {
			return getRuleContext(CreatorContext.class,0);
		}
		public NewExpContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterNewExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitNewExp(this);
		}
	}
	public static class SubExpContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SubExpContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterSubExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitSubExp(this);
		}
	}
	public static class SuffixExprContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PLUSPLUS() { return getToken(MleseParser.PLUSPLUS, 0); }
		public TerminalNode MINUSMINUS() { return getToken(MleseParser.MINUSMINUS, 0); }
		public SuffixExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).enterSuffixExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MleseListener ) ((MleseListener)listener).exitSuffixExpr(this);
		}
	}
	public static class SubscriptExpContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LBRACK() { return getToken(MleseParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(MleseParser.RBRACK, 0); }
		public SubscriptExpContext(ExpressionContext ctx) { copyFrom(ctx); }
